--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "test": "jest src/tests/tests.test.js"
   },
   "dependencies": {
     "cli-color": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.10.1",
-    "nodemon": "^2.0.7"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   }
 }
