--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon src/index.js",
-    "test": "jest src/tests/tests.test.js"
+    "test": "jest"
   },
   "dependencies": {
     "cli-color": "^2.0.0",
